--- a/src/locales/el.json
+++ b/src/locales/el.json
@@ -316,5 +316,18 @@
   "search_language": "Γλώσσα αναζήτησης",
   "please_provide_more_details_about_what_you_are_reporting": "Δώστε περισσότερες λεπτομέρειες σχετικά με το τι αναφέρετε",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Εάν βγείτε από την έξοδο, θα πρέπει να επαναλάβετε τον λογαριασμό σας και να διαγράψετε όλες τις πληροφορίες.",
-  "invalid_date_of_birth": "Μη έγκυρη ημερομηνία γέννησης"
+  "invalid_date_of_birth": "Μη έγκυρη ημερομηνία γέννησης",
+  "are_you_sure_you_want_to_sign_out?": "Είστε βέβαιοι ότι θέλετε να αποσυνδεθείτε;",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Οι συμβατοί χρήστες θα συνεχίσουν να σας βλέπουν στην τελευταία τοποθεσία.",
+  "delete_my_account": "Διάγραψε τον λογαριασμό μου",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Εάν θέλετε να διατηρήσετε τον λογαριασμό αλλά δεν είναι ορατό σε άλλους, μπορείτε να επιλέξετε να αποκρύψετε το λογαριασμό. Μπορείτε να απενεργοποιήσετε αυτήν τη λειτουργία στις ρυθμίσεις.",
+  "please_verify": "Παρακαλώ επαληθεύστε",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Βοηθήστε μας να προστατεύσουμε την κοινότητα Tinder, αποδεικνύοντας ότι χρησιμοποιείτε μια πρωτότυπη φωτογραφία. Απλά πρέπει να καταγράψετε ένα βίντεο selfie. Εάν το βίντεο selfie σας ταιριάζει με τη φωτογραφία του προφίλ σας, θα επαληθευτείτε!",
+  "maybe_later": "Ισως αργότερα",
+  "how_it_works": "Πως δουλεύει",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Η τεχνολογία αναγνώρισης του προσώπου μας συγκρίνει το πρόσωπό σας σε βίντεο selfie με φωτογραφίες στο προφίλ σας. Θα διατηρήσουμε δύο στιγμιότυπα οθόνης από το βίντεο Selfie για όσο διάστημα ο λογαριασμός σας είναι ζωντανός για να δοκιμάσετε και να διαχειριστείτε τη δυνατότητα επαλήθευσης φωτογραφιών σας. Θα διατηρήσουμε επίσης τα αποτελέσματα της διαδικασίας (π.χ. επαληθευμένη φωτογραφία ή όχι).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Θα διατηρήσουμε τις βασικές πληροφορίες αναγνώρισης προσώπου ή \"πρότυπα\", μετά την ολοκλήρωση της επαλήθευσης φωτογραφιών (συνήθως ολοκληρώθηκαν εντός 24 ωρών). Δεν αποθηκεύουμε τα βίντεο selfie σας.",
+  "invalid_image": "Μη έγκυρη εικόνα",
+  "your_photo_does_not_match.please_select_a_photo_again": "Η φωτογραφία σας δεν ταιριάζει. Επιλέξτε ξανά μια φωτογραφία",
+  "learn_more_about_how_it_works": "Μάθετε περισσότερα για το πώς λειτουργεί"
 }
