--- a/src/locales/pl.json
+++ b/src/locales/pl.json
@@ -66,7 +66,7 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Jest to łatwe - udostępnij kontakt swojego urządzenia z HeartLink podczas korzystania z tej funkcji, aby wybrać kogo chcesz uniknąć",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Przechowujemy Twój zablokowany kontakt, aby powstrzymać Cię przed widzeniem się, jeśli Twój kontakt ma konto z tym samym podawanym, co. Możesz przestać udostępniać z nami w swoich ustawieniach.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Dowiedz się więcej tutaj, w tym sposób przetwarzania kontaktów",
-  "share_{nameUser}_profile": "Udostępnij {nameUser} Profil",
+  "share_{nameUser}_profile": "Udostępnij {NameUser} Profil",
   "see_what_a_friend_thinks": "Zobacz, co myśli przyjaciel",
   "report_{nameUser}": "Raport {nameUser}",
   "away": "z dala",
@@ -316,5 +316,18 @@
   "search_language": "Wyszukaj język",
   "please_provide_more_details_about_what_you_are_reporting": "Podaj więcej szczegółów na temat tego, co zgłaszasz",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jeśli wyjdziesz, będziesz musiał ponownie zarejestrować swoje konto i usunąć wszystkie informacje.",
-  "invalid_date_of_birth": "Nieprawidłowa data urodzenia"
+  "invalid_date_of_birth": "Nieprawidłowa data urodzenia",
+  "are_you_sure_you_want_to_sign_out?": "Czy na pewno chcesz się wylogować?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatybilni użytkownicy będą nadal widzieć w ostatniej zidentyfikowanej lokalizacji.",
+  "delete_my_account": "Usuń moje konto",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Jeśli chcesz zachować konto, ale nie jest widoczne dla innych, możesz ukryć konto. Możesz wyłączyć tę funkcję w ustawieniach.",
+  "please_verify": "Proszę zweryfikuj",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Pomóż nam chronić społeczność Tinder, udowadniając, że używasz oryginalnego zdjęcia. Musisz tylko nagrać film selfie. Jeśli Twoje wideo selfie pasuje do twojego zdjęcia profilowego, zostaniesz zweryfikowany!",
+  "maybe_later": "Może później",
+  "how_it_works": "Jak to działa",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Nasza technologia rozpoznawania twarzy porównuje twoją twarz w filmach selfie ze zdjęciami w Twoim profilu. Będziemy przechowywać dwa zrzuty ekranu z twojego filmu do selfie tak długo, jak twoje konto jest na żywo, aby przetestować i zarządzać funkcją weryfikacji zdjęć. Zachowamy również wyniki procesu (np. Zdjęcie weryfikowane lub nie).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Będziemy przechowywać twoje podstawowe informacje o rozpoznawaniu twarzy lub „szablony” po zakończeniu weryfikacji zdjęcia (zwykle ukończonej w ciągu 24 godzin). Nie przechowujemy twoich filmów selfie.",
+  "invalid_image": "Nieprawidłowy obraz",
+  "your_photo_does_not_match.please_select_a_photo_again": "Twoje zdjęcie nie pasuje. Wybierz ponownie zdjęcie",
+  "learn_more_about_how_it_works": "Dowiedz się więcej o tym, jak to działa"
 }
