--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -1,9 +1,9 @@
 {
   "warm_welcome": "Chào đón nồng nhiệt",
   "we_hope_you_have_a_sweet_time_here": "Chúng tôi hy vọng bạn có một thời gian ngọt ngào ở đây",
-  "log_in_with_google": "Đăng nhập với Google",
-  "log_in_with_facebook": "Đăng nhập với Facebook",
-  "log_in_with_phone_number": "Đăng nhập với số điện thoại",
+  "log_in_with_google": "Đăng nhập bằng Google",
+  "log_in_with_facebook": "Đăng nhập Facebook",
+  "log_in_with_phone_number": "Đăng nhập bằng số điện thoại",
   "trouble_logging_in?": "Rắc rối đăng nhập?",
   "by_clicking_'login',_you_agree_with_our_terms._learn_how_we_process_your_data_in_our": "Bằng cách nhấp vào 'Đăng nhập', bạn đồng ý với các điều khoản của chúng tôi. Tìm hiểu cách chúng tôi xử lý dữ liệu của bạn trong",
   "privacy_policy": "Chính sách bảo mật",
@@ -50,7 +50,7 @@
   "show_{nameInformation}_on_my_profile": "Hiển thị {nameinformation} trên hồ sơ của tôi",
   "my_sexual_orientation_is": "Xu hướng tình dục của tôi là",
   "select_up_to_3": "Chọn tối đa 3",
-  "skip": "Bỏ qua",
+  "skip": "Nhảy",
   "my_interests_are": "Sở thích của tôi là",
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Cho mọi người biết bạn đam mê điều gì, bằng cách thêm nó vào hồ sơ của bạn",
   "show_me_gender": "Cho tôi thấy giới tính",
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "Thật dễ dàng - Chia sẻ liên hệ của thiết bị với Heartlink khi sử dụng tính năng này để chọn người bạn muốn tránh",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "Chúng tôi sẽ lưu trữ liên hệ bị chặn của bạn để ngăn bạn nhìn thấy nhau nếu liên hệ của bạn có tài khoản có cùng một thông tin bạn cung cấp. Bạn có thể ngừng chia sẻ với chúng tôi trong cài đặt của bạn.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Tìm hiểu thêm ở đây, bao gồm cả cách thức xử lý trái tim của các liên hệ của bạn",
-  "share_{nameUser}_profile": "Chia sẻ {nameUser} Hồ sơ",
+  "share_{nameUser}_profile": "Chia sẻ {nameuser} Hồ sơ",
   "see_what_a_friend_thinks": "Xem những gì một người bạn nghĩ",
-  "report_{nameUser}": "Báo cáo {nameUser}",
+  "report_{nameUser}": "Báo cáo {nameuser}",
   "away": "xa",
   "my_anthem": "QUỐC CA CỦA TÔI",
   "what_is_the_reason_for_your_report?": "Lý do cho báo cáo của bạn là gì?",
@@ -80,7 +80,7 @@
   "are_you_sure_about_the_content_of_this_report?": "Bạn có chắc chắn về nội dung của báo cáo này?",
   "let's_find_people_same_with_your_vibe...": "Hãy tìm mọi người giống với sự rung cảm của bạn ...",
   "join_now": "Tham gia ngay",
-  "no_thanks": "Không, cảm ơn",
+  "no_thanks": "KHÔNG, CÁM ƠN",
   "upgrade_to_gold_to_see_people_who_are_interested_in_you": "Nâng cấp lên vàng để xem những người quan tâm đến bạn",
   "no_one_likes_you_yet._done't_worry,_make_sure_you_complete_your_profile_to_other_find_you_faster": "Chưa ai thích bạn. Đừng lo lắng, hãy chắc chắn rằng bạn hoàn thành hồ sơ của mình để tìm bạn nhanh hơn",
   "see_who_likes_you": "Xem ai thích bạn",
@@ -122,7 +122,7 @@
   "go_back_and_try_again": "Quay lại và thử lại",
   "turn_off_ads": "Tắt quảng cáo",
   "have_fun_without_interruptions": "Vui chơi mà không bị gián đoạn",
-  "settings": "CÀI ĐẶT",
+  "settings": "Cài đặt",
   "edit_profile": "Chỉnh sửa hồ sơ",
   "safety": "SỰ AN TOÀN",
   "complete": "hoàn thành",
@@ -137,7 +137,7 @@
   "show_me": "Cho tôi xem",
   "we_use_these_preferences_to_find_matches._some_match_suggestions_may_not_fall_within_your_desired_parameters": "Chúng tôi sử dụng các tùy chọn này để tìm các trận đấu. Một số đề xuất phù hợp có thể không nằm trong các tham số mong muốn của bạn",
   "control_who_you_see": "Kiểm soát người bạn nhìn thấy",
-  "sliver_package": "Gói bạc",
+  "sliver_package": "Gói sliver",
   "balance_recommendations": "Khuyến nghị cân bằng",
   "see_the_most_relevant_people_to_you_(default_settings)": "Xem những người phù hợp nhất với bạn (cài đặt mặc định)",
   "recently_active": "Mới hoạt động",
@@ -172,16 +172,14 @@
   "about_me_-_maximize_500_words": "Về tôi - tối đa hóa 500 từ",
   "interest": "QUAN TÂM",
   "out_of_5": "ngoài 5",
-  "search_interest": "Tìm kiếm sở thích",
+  "search_interest": "Tìm kiếm lãi",
   "dating_purposes": "Mục đích hẹn hò",
   "i'm_looking_for": "Tôi đang tìm kiếm",
-  "empty": "Trống",
+  "empty": "trống",
   "now_i'm_looking_for...": "Bây giờ tôi đang tìm kiếm ...",
   "share_the_purpose_to_find_'that_person'": "Chia sẻ mục đích để tìm 'người đó'",
   "i_know_languages": "Tôi biết ngôn ngữ",
   "the_language_i_know": "Ngôn ngữ tôi biết",
-  "add_interests": "Thêm sở thích",
-  "add_sexual": "Thêm khuynh hướng tình dục",
   "choose_up_to_5_languages_you_know_and_add_to_your_profile": "Chọn tối đa 5 ngôn ngữ bạn biết và thêm vào hồ sơ của bạn",
   "basic_information": "THÔNG TIN CƠ BẢN",
   "add_more_info_so_people_can_see_your_amazing_pictures": "Thêm thông tin để mọi người có thể xem hình ảnh tuyệt vời của bạn",
@@ -242,10 +240,10 @@
   "interests": "Lợi ích",
   "my_gender": "Giới tính của tôi",
   "my_orientation": "định hướng của tôi",
-  "version_{environment}_{number}": "Phiên bản {environment}_{number}",
+  "version_x.y.z": "Phiên bản X.Y.Z",
   "km": "km",
   "mi": "mi",
-  "live_at_{nameAddress}": "Sống tại {nameaddress}",
+  "live_at_{nameAddress}": "Trực tiếp tại {nameaddress}",
   "{numberKilometers}_{unit}_away": "{numberKilometers} {unit}",
   "verified": "Đã xác minh",
   "heartLink": "Liên kết trái tim",
@@ -256,7 +254,6 @@
   "coffee_date": "Ngày cà phê",
   "find_someone_to_get_coffee_with": "Tìm ai đó để lấy cà phê với",
   "looking_for_love": "Tìm kiếm tình yêu",
-  "find_someone_that_also_looking_for_love_as_you": "Tìm một người cũng đang tìm kiếm tình yêu như bạn",
   "blind_date": "Hẹn hò giấu mặt",
   "open_hour_6pm_-_12pm_(local_time)": "Giờ mở 6 giờ tối - 12 giờ tối (giờ địa phương)",
   "share_idea": "Chia sẻ ý tưởng",
@@ -320,5 +317,17 @@
   "please_provide_more_details_about_what_you_are_reporting": "Vui lòng cung cấp thêm chi tiết về những gì bạn đang báo cáo",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Nếu bạn thoát, bạn sẽ phải đăng ký lại tài khoản của mình và xóa tất cả thông tin.",
   "invalid_date_of_birth": "Ngày sinh không hợp lệ",
-  "save": "Lưu"
+  "are_you_sure_you_want_to_sign_out?": "bạn có chắc chắn muốn đăng xuất không?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Người dùng tương thích sẽ tiếp tục gặp bạn ở vị trí được xác định cuối cùng.",
+  "delete_my_account": "Xóa tài khoản của tôi đi",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Nếu bạn muốn giữ tài khoản nhưng không hiển thị cho người khác, bạn có thể chọn ẩn tài khoản. Bạn có thể vô hiệu hóa tính năng này trong cài đặt.",
+  "please_verify": "Xin vui lòng xác minh",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Giúp chúng tôi bảo vệ cộng đồng Tinder bằng cách chứng minh bạn đang sử dụng ảnh gốc. Bạn chỉ cần ghi lại một video selfie. Nếu video selfie của bạn phù hợp với ảnh hồ sơ của bạn, bạn sẽ được xác minh!",
+  "maybe_later": "Có lẽ sau này",
+  "how_it_works": "Làm thế nào nó hoạt động",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Công nghệ nhận dạng khuôn mặt của chúng tôi so sánh khuôn mặt của bạn trong video selfie với ảnh trong hồ sơ của bạn. Chúng tôi sẽ giữ hai ảnh chụp màn hình từ video selfie của bạn miễn là tài khoản của bạn được trực tiếp để kiểm tra và quản lý tính năng xác minh ảnh của bạn. Chúng tôi cũng sẽ giữ kết quả của quá trình (ví dụ: ảnh được xác minh hoặc không).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_templates_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Chúng tôi sẽ giữ thông tin nhận dạng khuôn mặt cơ bản của bạn hoặc mẫu, sau khi hoàn thành xác minh ảnh (thường được hoàn thành trong vòng 24 giờ). Chúng tôi không lưu trữ video selfie của bạn.",
+  "invalid_image": "Hình ảnh không hợp lệ",
+  "your_photo_does_not_match.please_select_a_photo_again": "Ảnh của bạn không khớp. Xin vui lòng chọn ảnh một lần nữa",
+  "learn_more_about_how_it_works": "Tìm hiểu thêm về cách nó hoạt động"
 }
