--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "من السهل - مشاركة اتصال جهازك مع HeartLink عند استخدام هذه الميزة لاختيار من تريد تجنبه",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "سنقوم بتخزين جهة الاتصال المحظورة الخاصة بك لمنعك من رؤية بعضنا البعض إذا كان جهة الاتصال الخاصة بك تحتوي على حساب مع نفس Infor الذي تقدمه. يمكنك التوقف عن المشاركة معنا في إعداداتك.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "تعرف على المزيد هنا ، بما في ذلك كيفية معالجة HeartLink جهات الاتصال الخاصة بك",
-  "share_{nameUser}_profile": "مشاركة {nameUser} ملف تعريف",
+  "share_{nameUser}_profile": "مشاركة {nameuser} ملف تعريف",
   "see_what_a_friend_thinks": "انظر ماذا يفكر صديق",
-  "report_{nameUser}": "تقرير {nameUser}",
+  "report_{nameUser}": "تقرير {nameuser}",
   "away": "بعيد",
   "my_anthem": "نشيد بلدي",
   "what_is_the_reason_for_your_report?": "ما هو سبب تقريرك؟",
@@ -316,5 +316,18 @@
   "search_language": "لغة البحث",
   "please_provide_more_details_about_what_you_are_reporting": "يرجى تقديم المزيد من التفاصيل حول ما تقوم بالإبلاغ عنه",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "إذا خرجت ، فسيتعين عليك إعادة تسجيل حسابك وحذف جميع المعلومات.",
-  "invalid_date_of_birth": "تاريخ ميلاد غير صالح"
+  "invalid_date_of_birth": "تاريخ ميلاد غير صالح",
+  "are_you_sure_you_want_to_sign_out?": "هل أنت متأكد أنك تريد الخروج؟",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "سيستمر المستخدمون المتوافقون في رؤيتك في الموقع المحدد الأخير.",
+  "delete_my_account": "احذف حسابي",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "إذا كنت ترغب في الاحتفاظ بالحساب ولكن غير مرئي للآخرين ، فيمكنك اختيار إخفاء الحساب. يمكنك تعطيل هذه الميزة في الإعدادات.",
+  "please_verify": "ارجوك تحقق",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ساعدنا في حماية مجتمع Tinder من خلال إثبات أنك تستخدم صورة أصلية. تحتاج فقط إلى تسجيل فيديو صورة شخصية. إذا كان مقطع الفيديو الخاص بك يتطابق مع صورة ملفك الشخصي ، فسوف يتم التحقق منه!",
+  "maybe_later": "ربما في وقت لاحق",
+  "how_it_works": "كيف تعمل",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "تقارن تقنية التعرف على وجهنا وجهك في مقاطع الفيديو الخاصة بك مع صور في ملفك الشخصي. سنحتفظ بسباقين من مقطع الفيديو الخاص بك ، طالما أن حسابك مباشر لاختبار وإدارة ميزة التحقق من الصور الخاصة بك. سنحتفظ أيضًا بنتائج العملية (على سبيل المثال ، تم التحقق من الصورة أم لا).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "سنحتفظ بمعلومات التعرف على الوجه الأساسية ، أو \"القوالب\" ، عند الانتهاء من التحقق من الصور (عادةً ما يتم الانتهاء منها خلال 24 ساعة). نحن لا نقوم بتخزين مقاطع الفيديو الخاصة بك.",
+  "invalid_image": "صورة غير صالحة",
+  "your_photo_does_not_match.please_select_a_photo_again": "صورتك لا تتطابق. please حدد صورة مرة أخرى",
+  "learn_more_about_how_it_works": "تعرف على المزيد حول كيفية عملها"
 }
