--- a/src/locales/da.json
+++ b/src/locales/da.json
@@ -240,7 +240,7 @@
   "interests": "Interesser",
   "my_gender": "Mit køn",
   "my_orientation": "min orientering",
-  "version_x.y.z": "Version",
+  "version_x.y.z": "Version X.Y.Z",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {NameAddress}",
@@ -316,5 +316,18 @@
   "search_language": "Søgningsprog",
   "please_provide_more_details_about_what_you_are_reporting": "Giv flere detaljer om, hvad du rapporterer",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du forlader, bliver du nødt til at omregistrere din konto og slette alle oplysninger.",
-  "invalid_date_of_birth": "Ugyldig fødselsdato"
+  "invalid_date_of_birth": "Ugyldig fødselsdato",
+  "are_you_sure_you_want_to_sign_out?": "Er du sikker på, at du vil logge ud?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatible brugere vil fortsat se dig på det sidst identificerede sted.",
+  "delete_my_account": "Slet min konto",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Hvis du vil beholde kontoen, men ikke er synlig for andre, kan du vælge at skjule kontoen. Du kan deaktivere denne funktion i indstillingerne.",
+  "please_verify": "Bekræft venligst",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Hjælp os med at beskytte Tinder -samfundet ved at bevise, at du bruger et originalt foto. Du skal bare optage en selfie -video. Hvis din selfie -video matcher dit profilfoto, bliver du verificeret!",
+  "maybe_later": "Måske senere",
+  "how_it_works": "Hvordan det virker",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Vores ansigtsgenkendelsesteknologi sammenligner dit ansigt i selfie -videoer med fotos i din profil. Vi holder to skærmbilleder fra din selfie -video, så længe din konto er live for at teste og administrere din fotobekræftelsesfunktion. Vi vil også holde resultaterne af processen (f.eks. Foto verificeret eller ej).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi opbevarer dine grundlæggende oplysninger om ansigtsgenkendelse eller \"skabeloner\", efter afslutningen af ​​fotobekræftelse (normalt afsluttet inden for 24 timer). Vi gemmer ikke dine selfie -videoer.",
+  "invalid_image": "Ugyldigt billede",
+  "your_photo_does_not_match.please_select_a_photo_again": "Dit foto stemmer ikke overens. Vælg et foto igen",
+  "learn_more_about_how_it_works": "Lær mere om, hvordan det fungerer"
 }
