--- a/src/locales/en-rGB.json
+++ b/src/locales/en-rGB.json
@@ -316,5 +316,18 @@
   "search_language": "Search Language",
   "please_provide_more_details_about_what_you_are_reporting": "Please provide more details about what you are reporting",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "If you exit you will have to re-register your account and delete all information.",
-  "invalid_date_of_birth": "Invalid date of birth"
+  "invalid_date_of_birth": "Invalid date of birth",
+  "are_you_sure_you_want_to_sign_out?": "Are you sure you want to sign out?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Compatible users will continue to see you in the last identified location.",
+  "delete_my_account": "Delete my account",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "If you want to keep the account but not visible to others, you can choose to hide the account. You can disable this feature in the settings.",
+  "please_verify": "Please verify",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Help us protect the Tinder community by proving you're using an original photo. You just need to record a selfie video. If your selfie video matches your profile photo, you'll be verified!",
+  "maybe_later": "Maybe later",
+  "how_it_works": "How it works",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Our face recognition technology compares your face in selfie videos with photos in your profile. We'll keep two screenshots from your selfie video for as long as your account is live to test and manage your Photo Verification feature. We will also keep the results of the process (e.g. Photo Verified or not).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "We'll keep your basic facial recognition information, or \"templates,\" upon completion of Photo Verification (usually completed within 24 hours). We do not store your selfie videos.",
+  "invalid_image": "Invalid image",
+  "your_photo_does_not_match.please_select_a_photo_again": "Your photo does not match.Please select a photo again",
+  "learn_more_about_how_it_works": "Learn more about how it works"
 }
