--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,8 +55,6 @@
   "let_everyone_know_what_you're_passionate_about,_by_adding_it_to_your_profile": "Let everyone know what you're passionate about, by adding it to your profile",
   "show_me_gender": "Show me gender",
   "my_photos_are": "My Photos are",
-  "add_interests": "Add interests",
-  "add_sexual": "Add sexual",
   "add_at_least_2_photos_to_continue": "Add at least 2 photos to continue",
   "enable_location": "Enable Location",
   "you_will_need_to_enable_your_location_order_to_use_heartLinks": "You will need to enable your location order to use HeartLinks",
@@ -242,7 +240,7 @@
   "interests": "Interests",
   "my_gender": "my gender",
   "my_orientation": "my orientation",
-  "version_{environment}_{number}": "Version {environment}_{number}",
+  "version_x.y.z": "Version x.y.z",
   "km": "km",
   "mi": "mi",
   "live_at_{nameAddress}": "Live at {nameAddress}",
@@ -255,7 +253,6 @@
   "find_someone_that_wants_to_be_friends": "Find someone that wants to be friends",
   "coffee_date": "Coffee Date",
   "find_someone_to_get_coffee_with": "Find someone to get coffee with",
-  "find_someone_that_also_looking_for_love_as_you": "Find someone that also looking for love as you",
   "looking_for_love": "Looking for love",
   "blind_date": "Blind Date",
   "open_hour_6pm_-_12pm_(local_time)": "Open hour 6pm - 12pm (Local time)",
@@ -320,5 +317,17 @@
   "please_provide_more_details_about_what_you_are_reporting": "Please provide more details about what you are reporting",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "If you exit you will have to re-register your account and delete all information.",
   "invalid_date_of_birth": "Invalid date of birth",
-  "save": "Save"
+  "are_you_sure_you_want_to_sign_out?": "Are you sure you want to sign out?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Compatible users will continue to see you in the last identified location.",
+  "delete_my_account": "Delete my account",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "If you want to keep the account but not visible to others, you can choose to hide the account. You can disable this feature in the settings.",
+  "please_verify": "Please verify",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Help us protect the Tinder community by proving you're using an original photo. You just need to record a selfie video. If your selfie video matches your profile photo, you'll be verified!",
+  "maybe_later": "Maybe later",
+  "how_it_works": "How it works",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Our face recognition technology compares your face in selfie videos with photos in your profile. We'll keep two screenshots from your selfie video for as long as your account is live to test and manage your Photo Verification feature. We will also keep the results of the process (e.g. Photo Verified or not).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "We'll keep your basic facial recognition information, or \"templates,\" upon completion of Photo Verification (usually completed within 24 hours). We do not store your selfie videos.",
+  "invalid_image": "Invalid image",
+  "your_photo_does_not_match.please_select_a_photo_again": "Your photo does not match.Please select a photo again",
+  "learn_more_about_how_it_works": "Learn more about how it works"
 }
