--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -316,5 +316,18 @@
   "search_language": "Lenguaje de búsqueda",
   "please_provide_more_details_about_what_you_are_reporting": "Proporcione más detalles sobre lo que está informando",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Si sale, tendrá que volver a registrar su cuenta y eliminar toda la información.",
-  "invalid_date_of_birth": "fecha de nacimiento invalida"
+  "invalid_date_of_birth": "fecha de nacimiento invalida",
+  "are_you_sure_you_want_to_sign_out?": "¿Estás seguro de que quieres cerrar sesión?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Los usuarios compatibles continuarán viéndolo en la última ubicación identificada.",
+  "delete_my_account": "Borrar mi cuenta",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Si desea mantener la cuenta pero no visible para los demás, puede optar por ocultar la cuenta. Puede deshabilitar esta función en la configuración.",
+  "please_verify": "Por favor verificar",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Ayúdanos a proteger a la comunidad Tinder demostrando que está utilizando una foto original. Solo necesitas grabar un video selfie. Si tu video selfie coincide con tu foto de perfil, ¡serás verificado!",
+  "maybe_later": "Quizas mas tarde",
+  "how_it_works": "Cómo funciona",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Nuestra tecnología de reconocimiento facial compara su cara en videos de selfie con fotos en su perfil. Mantendremos dos capturas de pantalla de su video selfie mientras su cuenta esté en vivo para probar y administrar su función de verificación de fotos. También mantendremos los resultados del proceso (por ejemplo, foto verificada o no).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Mantendremos su información básica de reconocimiento facial, o \"plantillas\", al finalizar la verificación de fotos (generalmente completada dentro de las 24 horas). No almacenamos tus videos de selfies.",
+  "invalid_image": "Imagen inválida",
+  "your_photo_does_not_match.please_select_a_photo_again": "Su foto no coincide. Por favor, seleccione una foto nuevamente",
+  "learn_more_about_how_it_works": "Aprenda más sobre cómo funciona"
 }
