--- a/src/locales/fi.json
+++ b/src/locales/fi.json
@@ -316,5 +316,18 @@
   "search_language": "Hakukieli",
   "please_provide_more_details_about_what_you_are_reporting": "Anna lisätietoja siitä, mitä ilmoitat",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jos poistut, sinun on rekisteröitävä tilisi uudelleen ja poistettava kaikki tiedot.",
-  "invalid_date_of_birth": "Virheellinen syntymäpäivä"
+  "invalid_date_of_birth": "Virheellinen syntymäpäivä",
+  "are_you_sure_you_want_to_sign_out?": "Oletko varma, että haluat kirjautua ulos?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Yhteensopivat käyttäjät näkevät sinut edelleen viimeisimmässä tunnistetussa paikassa.",
+  "delete_my_account": "Poista minun tilini",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Jos haluat pitää tilin, mutta et ole näkyvissä muille, voit piilottaa tilin. Voit poistaa tämän ominaisuuden käytöstä asetuksissa.",
+  "please_verify": "Tarkista",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Auta meitä suojelemaan Tinder -yhteisöä todistamalla, että käytät alkuperäistä kuvaa. Sinun täytyy vain nauhoittaa selfie -video. Jos selfie -videosi vastaa profiilikuvaa, sinut vahvistetaan!",
+  "maybe_later": "Ehkä myöhemmin",
+  "how_it_works": "Kuinka se toimii",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Kasvojen tunnistustekniikkamme vertaa kasvosi selfie -videoissa valokuvien kanssa profiilissasi. Pidämme kaksi kuvakaappausta selfie -videostasi niin kauan kuin tilisi on suorana testaamaan ja hallitsemaan valokuvien vahvistusominaisuutta. Pidämme myös prosessin tulokset (esim. Valokuva vahvistettu tai ei).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Pidämme perustiedot kasvojen tunnistustietosi tai \"malleja\" valokuvien tarkistuksen päätyttyä (yleensä valmistettu 24 tunnin sisällä). Emme tallenna selfie -videoitasi.",
+  "invalid_image": "Virheellinen kuva",
+  "your_photo_does_not_match.please_select_a_photo_again": "Valokuvasi ei vastaa. Valitse valokuva uudelleen",
+  "learn_more_about_how_it_works": "Lisätietoja siitä, miten se toimii"
 }
