--- a/src/locales/ko.json
+++ b/src/locales/ko.json
@@ -66,9 +66,9 @@
   "it_is_easy_-_share_your_device's_contact_with_heartLink_when_using_this_feature_to_pick_who_you_want_to_avoid": "쉽습니다 -이 기능을 사용하여 피하고 싶은 사람을 선택할 때 장치의 Heartlink와의 접촉을 공유하십시오.",
   "we'll_store_your_blocked_contact_to_stop_you_from_seeing_each_other_if_your_contact_has_an_account_with_the_same_infor_you_provide._you_can_stop_sharing_with_us_in_your_settings.": "귀하의 연락처에 귀하가 제공하는 동일한 정보가있는 계정이 있으면 서로를 보지 못하도록 차단 된 연락처를 저장하겠습니다. 당신은 당신의 설정에서 우리와 공유를 중지 할 수 있습니다.",
   "learn_more_here,_including_how_heartLink_process_your_contacts": "Heartlink가 연락처를 처리하는 방법을 포함하여 여기에서 자세히 알아보십시오.",
-  "share_{nameUser}_profile": "{nameUser} 프로파일을 공유하십시오",
+  "share_{nameUser}_profile": "{nameuser} 프로파일을 공유하십시오",
   "see_what_a_friend_thinks": "친구가 어떻게 생각하는지보십시오",
-  "report_{nameUser}": "보고서 {nameUser}",
+  "report_{nameUser}": "보고서 {nameuser}",
   "away": "떨어져 있는",
   "my_anthem": "내 애국가",
   "what_is_the_reason_for_your_report?": "보고서의 이유는 무엇입니까?",
@@ -316,5 +316,18 @@
   "search_language": "검색어",
   "please_provide_more_details_about_what_you_are_reporting": "보고 한 내용에 대한 자세한 내용을 제공하십시오",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "나가면 계정을 다시 등록하고 모든 정보를 삭제해야합니다.",
-  "invalid_date_of_birth": "유효하지 않은 생년월일"
+  "invalid_date_of_birth": "유효하지 않은 생년월일",
+  "are_you_sure_you_want_to_sign_out?": "서명 하시겠습니까?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "호환되는 사용자는 마지막으로 식별 된 위치에서 계속 보게 될 것입니다.",
+  "delete_my_account": "계정을 삭제하다",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "계정을 유지하려고하지만 다른 사람에게는 보이지 않으면 계정을 숨기도록 선택할 수 있습니다. 설정 에서이 기능을 비활성화 할 수 있습니다.",
+  "please_verify": "확인 부탁합니다",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "원본 사진을 사용하고 있음을 증명하여 틴더 커뮤니티를 보호하도록 도와줍니다. 셀카 비디오를 녹음하면됩니다. 셀카 비디오가 프로필 사진과 일치하면 확인됩니다!",
+  "maybe_later": "나중에",
+  "how_it_works": "작동 방식",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "우리의 얼굴 인식 기술은 셀카 비디오의 얼굴을 프로필의 사진과 비교합니다. 귀하의 계정이 사진 검증 기능을 테스트하고 관리하기 위해 생중계되는 한 셀카 비디오에서 두 개의 스크린 샷을 유지합니다. 또한 프로세스 결과를 유지합니다 (예 : 사진 검증 여부).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "사진 검증이 완료되면 (일반적으로 24 시간 이내에 완료) 기본 얼굴 인식 정보 또는 \"템플릿\"을 유지합니다. 우리는 당신의 셀카 비디오를 저장하지 않습니다.",
+  "invalid_image": "잘못된 이미지",
+  "your_photo_does_not_match.please_select_a_photo_again": "사진이 일치하지 않습니다. 사진을 다시 선택하십시오",
+  "learn_more_about_how_it_works": "작동 방식에 대해 자세히 알아보십시오"
 }
