--- a/src/locales/ms.json
+++ b/src/locales/ms.json
@@ -316,5 +316,18 @@
   "search_language": "Bahasa cari",
   "please_provide_more_details_about_what_you_are_reporting": "Sila berikan lebih banyak maklumat mengenai apa yang anda laporkan",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Jika anda keluar, anda perlu mendaftar semula akaun anda dan memadam semua maklumat.",
-  "invalid_date_of_birth": "Tarikh lahir tidak sah"
+  "invalid_date_of_birth": "Tarikh lahir tidak sah",
+  "are_you_sure_you_want_to_sign_out?": "Adakah anda pasti mahu mendaftar keluar?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Pengguna yang serasi akan terus melihat anda di lokasi yang dikenal pasti terakhir.",
+  "delete_my_account": "Padamkan akaun saya",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Jika anda ingin menyimpan akaun tetapi tidak dapat dilihat oleh orang lain, anda boleh memilih untuk menyembunyikan akaun. Anda boleh melumpuhkan ciri ini dalam tetapan.",
+  "please_verify": "Sila sahkan",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Bantu kami melindungi komuniti Tinder dengan membuktikan anda menggunakan foto asal. Anda hanya perlu merakam video selfie. Jika video selfie anda sepadan dengan foto profil anda, anda akan disahkan!",
+  "maybe_later": "Mungkin kemudian",
+  "how_it_works": "Bagaimana ia berfungsi",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Teknologi Pengiktirafan Wajah kami membandingkan wajah anda dalam video selfie dengan foto dalam profil anda. Kami akan menyimpan dua tangkapan skrin dari video selfie anda selagi akaun anda hidup untuk menguji dan menguruskan ciri pengesahan foto anda. Kami juga akan mengekalkan hasil proses (mis. Foto yang disahkan atau tidak).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Kami akan menyimpan maklumat pengiktirafan muka asas anda, atau \"templat,\" setelah selesai pengesahan foto (biasanya selesai dalam masa 24 jam). Kami tidak menyimpan video selfie anda.",
+  "invalid_image": "Imej tidak sah",
+  "your_photo_does_not_match.please_select_a_photo_again": "Foto anda tidak sepadan. Sila pilih foto lagi",
+  "learn_more_about_how_it_works": "Ketahui lebih lanjut mengenai bagaimana ia berfungsi"
 }
