--- a/src/locales/nb.json
+++ b/src/locales/nb.json
@@ -316,5 +316,18 @@
   "search_language": "Søkespråk",
   "please_provide_more_details_about_what_you_are_reporting": "Gi mer informasjon om hva du rapporterer",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Hvis du avslutter, må du registrere kontoen din på nytt og slette all informasjon.",
-  "invalid_date_of_birth": "Ugyldig fødselsdato"
+  "invalid_date_of_birth": "Ugyldig fødselsdato",
+  "are_you_sure_you_want_to_sign_out?": "Er du sikker på at du vil logge deg ut?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatible brukere vil fortsette å se deg på det siste identifiserte stedet.",
+  "delete_my_account": "Slett kontoen min",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Hvis du vil beholde kontoen, men ikke synlig for andre, kan du velge å skjule kontoen. Du kan deaktivere denne funksjonen i innstillingene.",
+  "please_verify": "Vennligst bekreft",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Hjelp oss med å beskytte Tinder -samfunnet ved å bevise at du bruker et originalt bilde. Du trenger bare å spille inn en selfie -video. Hvis selfie -videoen din samsvarer med profilbildet ditt, blir du bekreftet!",
+  "maybe_later": "Kanskje senere",
+  "how_it_works": "Hvordan det fungerer",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Vår ansiktsgjenkjenningsteknologi sammenligner ansiktet ditt i selfie -videoer med bilder i profilen din. Vi holder to skjermbilder fra selfie -videoen din så lenge kontoen din er live for å teste og administrere fotoverifiseringsfunksjonen. Vi vil også beholde resultatene av prosessen (f.eks. Foto bekreftet eller ikke).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi holder din grunnleggende ansiktsgjenkjenningsinformasjon, eller \"maler\", etter fullføring av fotoverifisering (vanligvis fullført innen 24 timer). Vi lagrer ikke selfie -videoene dine.",
+  "invalid_image": "Ugyldig bilde",
+  "your_photo_does_not_match.please_select_a_photo_again": "Bildet ditt stemmer ikke overens. Velg et bilde igjen",
+  "learn_more_about_how_it_works": "Lær mer om hvordan det fungerer"
 }
