--- a/src/locales/ro.json
+++ b/src/locales/ro.json
@@ -316,5 +316,18 @@
   "search_language": "Limba de căutare",
   "please_provide_more_details_about_what_you_are_reporting": "Vă rugăm să furnizați mai multe detalii despre ceea ce raportați",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Dacă ieșiți, va trebui să vă înregistrați contul și să ștergeți toate informațiile.",
-  "invalid_date_of_birth": "Data nașterii nevalide"
+  "invalid_date_of_birth": "Data nașterii nevalide",
+  "are_you_sure_you_want_to_sign_out?": "Ești sigur că vrei să te conectezi?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Utilizatorii compatibili vor continua să vă vadă în ultima locație identificată.",
+  "delete_my_account": "Sterge contul meu",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Dacă doriți să păstrați contul, dar nu vizibil pentru alții, puteți alege să ascundeți contul. Puteți dezactiva această caracteristică în setări.",
+  "please_verify": "Te rog sa verifici",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Ajută -ne să protejăm comunitatea Tinder dovedind că utilizați o fotografie originală. Trebuie doar să înregistrați un videoclip selfie. Dacă videoclipul dvs. selfie se potrivește cu fotografia dvs. de profil, veți fi verificat!",
+  "maybe_later": "Poate mai târziu",
+  "how_it_works": "Cum functioneaza",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Tehnologia noastră de recunoaștere a feței vă compară fața în videoclipuri selfie cu fotografii din profilul dvs. Vom păstra două capturi de ecran din videoclipul dvs. selfie, atât timp cât contul dvs. este live pentru a testa și gestiona funcția de verificare foto. De asemenea, vom păstra rezultatele procesului (de exemplu, fotografia verificată sau nu).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vă vom păstra informațiile de bază de recunoaștere facială sau „șabloane”, după finalizarea verificării foto (de obicei finalizate în 24 de ore). Nu vă stocăm videoclipurile selfie.",
+  "invalid_image": "Imagine nevalide",
+  "your_photo_does_not_match.please_select_a_photo_again": "Fotografia dvs. nu se potrivește. Vă rugăm să selectați din nou o fotografie",
+  "learn_more_about_how_it_works": "Aflați mai multe despre cum funcționează"
 }
