--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -316,5 +316,18 @@
   "search_language": "Язык поиска",
   "please_provide_more_details_about_what_you_are_reporting": "Пожалуйста, предоставьте более подробную информацию о том, что вы сообщаете",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Если вы выйдете в выход, вам придется перерегистрировать свою учетную запись и удалить всю информацию.",
-  "invalid_date_of_birth": "Неверная дата рождения"
+  "invalid_date_of_birth": "Неверная дата рождения",
+  "are_you_sure_you_want_to_sign_out?": "Вы уверены, что хотите выйти?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Совместимые пользователи будут продолжать видеть вас в последнем идентифицированном месте.",
+  "delete_my_account": "Удалите мой аккаунт",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Если вы хотите сохранить учетную запись, но не виден для других, вы можете скрыть учетную запись. Вы можете отключить эту функцию в настройках.",
+  "please_verify": "Пожалуйста, подтвердите",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Помогите нам защитить сообщество Tinder, доказав, что вы используете оригинальную фотографию. Вам просто нужно записать видео селфи. Если ваше видео селфи соответствует фотографии вашего профиля, вы будете проверены!",
+  "maybe_later": "Может быть позже",
+  "how_it_works": "Как это работает",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Наша технология распознавания лица сравнивает ваше лицо в видео селфи с фотографиями в вашем профиле. Мы оставляем два скриншота из вашего видео в селфи до тех пор, пока ваша учетная запись живет для тестирования и управления вашей функцией проверки фотографий. Мы также сохраним результаты процесса (например, проверка фотографии или нет).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Мы сохраним вашу основную информацию о распознавании лиц или «шаблоны» после завершения проверки фотографий (обычно завершаются в течение 24 часов). Мы не храним ваши видео селфи.",
+  "invalid_image": "Неверное изображение",
+  "your_photo_does_not_match.please_select_a_photo_again": "Ваша фотография не совпадает. Пожалуйста, снова выберите фото",
+  "learn_more_about_how_it_works": "Узнайте больше о том, как это работает"
 }
