--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -316,5 +316,18 @@
   "search_language": "Sökspråk",
   "please_provide_more_details_about_what_you_are_reporting": "Ange mer information om vad du rapporterar",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "Om du lämnar måste du registrera ditt konto igen och ta bort all information.",
-  "invalid_date_of_birth": "Ogiltigt födelsedatum"
+  "invalid_date_of_birth": "Ogiltigt födelsedatum",
+  "are_you_sure_you_want_to_sign_out?": "Är du säker på att du vill logga ut?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "Kompatibla användare kommer att fortsätta se dig på den sista identifierade platsen.",
+  "delete_my_account": "Ta bort mitt konto",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "Om du vill behålla kontot men inte är synligt för andra kan du välja att dölja kontot. Du kan inaktivera den här funktionen i inställningarna.",
+  "please_verify": "Var vänlig och verifiera",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "Hjälp oss att skydda Tinder -samhället genom att bevisa att du använder ett originalfoto. Du behöver bara spela in en selfie -video. Om din selfie -video matchar ditt profilfoto, blir du verifierad!",
+  "maybe_later": "Kanske senare",
+  "how_it_works": "Hur det fungerar",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "Vår ansiktsigenkänningsteknologi jämför ditt ansikte i selfie -videor med foton i din profil. Vi kommer att hålla två skärmdumpar från din selfie -video så länge ditt konto är live för att testa och hantera din fotorverifieringsfunktion. Vi kommer också att behålla resultaten av processen (t.ex. foto verifierad eller inte).",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "Vi kommer att behålla din grundläggande information om ansiktsigenkänning, eller \"mallar\", efter avslutad fotoperifiering (vanligtvis slutförd inom 24 timmar). Vi lagrar inte dina selfie -videor.",
+  "invalid_image": "Ogiltig bild",
+  "your_photo_does_not_match.please_select_a_photo_again": "Ditt foto matchar inte. Välj ett foto igen",
+  "learn_more_about_how_it_works": "Lär dig mer om hur det fungerar"
 }
