--- a/src/locales/th.json
+++ b/src/locales/th.json
@@ -316,5 +316,18 @@
   "search_language": "ภาษาค้นหา",
   "please_provide_more_details_about_what_you_are_reporting": "โปรดให้รายละเอียดเพิ่มเติมเกี่ยวกับสิ่งที่คุณกำลังรายงาน",
   "if_you_exit_you_will_have_to_re-register_your_account_and_delete_all_information.": "หากคุณออกจากคุณจะต้องลงทะเบียนบัญชีของคุณอีกครั้งและลบข้อมูลทั้งหมด",
-  "invalid_date_of_birth": "วันเดือนปีเกิดไม่ถูกต้อง"
+  "invalid_date_of_birth": "วันเดือนปีเกิดไม่ถูกต้อง",
+  "are_you_sure_you_want_to_sign_out?": "คุณแน่ใจว่าคุณต้องการที่จะออกจากระบบ?",
+  "compatible_users_will_continue_to_see_you_in_the_last_identified_location.": "ผู้ใช้ที่เข้ากันได้จะยังคงพบคุณในตำแหน่งที่ระบุล่าสุด",
+  "delete_my_account": "ลบบัญชีของฉัน",
+  "if_you_want_to_keep_the_account_but_not_visible_to_others,_you_can_choose_to_hide_the_account._you_can_disable_this_feature_in_the_settings.": "หากคุณต้องการเก็บบัญชีไว้ แต่ไม่สามารถมองเห็นได้สำหรับผู้อื่นคุณสามารถเลือกที่จะซ่อนบัญชี คุณสามารถปิดการใช้งานคุณสมบัตินี้ในการตั้งค่า",
+  "please_verify": "กรุณายืนยัน",
+  "help_us_protect_the_tinder_community_by_proving_you're_using_an_original_photo._you_just_need_to_record_a_selfie_video._if_your_selfie_video_matches_your_profile_photo,_you'll_be_verified!": "ช่วยเราปกป้องชุมชน Tinder โดยพิสูจน์ว่าคุณใช้ภาพถ่ายต้นฉบับ คุณเพียงแค่ต้องบันทึกวิดีโอเซลฟี่ หากวิดีโอเซลฟี่ของคุณตรงกับรูปโปรไฟล์ของคุณคุณจะได้รับการยืนยัน!",
+  "maybe_later": "ไว้ก่อน",
+  "how_it_works": "มันทำงานอย่างไร",
+  "our_face_recognition_technology_compares_your_face_in_selfie_videos_with_photos_in_your_profile._we'll_keep_two_screenshots_from_your_selfie_video_for_as_long_as_your_account_is_live_to_test_and_manage_your_photo_verification_feature._we_will_also_keep_the_results_of_the_process_(e.g._photo_verified_or_not).": "เทคโนโลยีการจดจำใบหน้าของเราเปรียบเทียบใบหน้าของคุณในวิดีโอเซลฟี่กับภาพถ่ายในโปรไฟล์ของคุณ เราจะเก็บภาพหน้าจอสองภาพจากวิดีโอเซลฟี่ของคุณตราบเท่าที่บัญชีของคุณยังมีชีวิตอยู่เพื่อทดสอบและจัดการคุณสมบัติการยืนยันภาพถ่ายของคุณ นอกจากนี้เรายังจะรักษาผลลัพธ์ของกระบวนการ (เช่นภาพถ่ายที่ตรวจสอบหรือไม่)",
+  "we'll_keep_your_basic_facial_recognition_information,_or_\"templates,\"_upon_completion_of_photo_verification_(usually_completed_within_24_hours)._we_do_not_store_your_selfie_videos.": "เราจะเก็บข้อมูลการจดจำใบหน้าขั้นพื้นฐานของคุณหรือ \"แม่แบบ\" เมื่อเสร็จสิ้นการตรวจสอบภาพถ่าย (โดยปกติจะเสร็จสิ้นภายใน 24 ชั่วโมง) เราไม่เก็บวิดีโอเซลฟี่ของคุณ",
+  "invalid_image": "ภาพที่ไม่ถูกต้อง",
+  "your_photo_does_not_match.please_select_a_photo_again": "รูปภาพของคุณไม่ตรงกันโปรดเลือกรูปภาพอีกครั้ง",
+  "learn_more_about_how_it_works": "เรียนรู้เพิ่มเติมเกี่ยวกับวิธีการทำงาน"
 }
